--- a/ligapro_manager/templates/report/config.html
+++ b/ligapro_manager/templates/report/config.html
@@ -110,16 +110,5 @@
     </main>
 </div>
 
-<script>
-    function toggleDateInput(leagueId, isFromStart) {
-        const input = document.getElementById('date_input_' + leagueId);
-        if (isFromStart) {
-            input.classList.add('hidden');
-            input.removeAttribute('required');
-        } else {
-            input.classList.remove('hidden');
-            input.setAttribute('required', 'required');
-        }
-    }
-</script>
+<script src="{{ url_for('static', filename='js/report_config.js') }}"></script>
 {% endblock %}
