--- a/ligapro_manager/templates/report/history.html
+++ b/ligapro_manager/templates/report/history.html
@@ -16,7 +16,7 @@
             </div>
 
             <!-- Navigation Tabs -->
-            <div class="flex bg-white/5 rounded-lg p-1">
+            <div class="flex bg-white/5 rounded-lg p-1 overflow-x-auto whitespace-nowrap hide-scrollbar">
                 <a href="{{ url_for('report.global_schedule') }}"
                     class="px-4 py-2 rounded-md text-sm text-white/60 hover:text-white hover:bg-white/5 transition-colors">Agenda</a>
                 <a href="{{ url_for('report.global_schedule_config') }}"
