--- a/ligapro_manager/templates/admin/leagues.html
+++ b/ligapro_manager/templates/admin/leagues.html
@@ -18,8 +18,8 @@
     </header>
 
     <main class="max-w-7xl mx-auto px-6 py-8">
-        <div class="card overflow-hidden">
-            <table class="w-full text-left">
+        <div class="card overflow-x-auto">
+            <table class="w-full text-left whitespace-nowrap min-w-max">
                 <thead>
                     <tr class="bg-white/5 border-b border-white/10">
                         <th class="py-4 px-6 text-white/60">Nombre de la Liga</th>
